--- a/lua/.luarc.json
+++ b/lua/.luarc.json
@@ -2,6 +2,35 @@
     "workspace.library": [
         "/Users/alexkang/.local/share/nvim/lazy/neodev.nvim/types/stable",
         "/opt/homebrew/Cellar/neovim/0.9.0/share/nvim/runtime/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/nvim-treesitter/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/nvim-web-devicons/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/indent-blankline.nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/nvim-cokeline/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/nvim-lspconfig/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/kanagawa.nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/lualine.nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/mason.nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/neovim-session-manager/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/telescope.nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/mason-lspconfig.nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/plenary.nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/telescope-fzf-native.nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/onenord.nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/fidget.nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/toggleterm.nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/everforest-nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/cmp_luasnip/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/nvim-tree.lua/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/nvim-cmp/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/which-key.nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/gitsigns.nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/lazy.nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/cmp-nvim-lsp/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/LuaSnip/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/nvim-treesitter-textobjects/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/neodev.nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/alpha-nvim/lua",
+        "/Users/alexkang/.local/share/nvim/lazy/nordic.nvim/lua",
         "/Users/alexkang/.config/nvim/lua",
         "${3rd}/luv/library"
     ]
